<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_heading">My Nanodegree Apps</string>
    <string name="poplular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="buildit_bigger">Build It Bigger</string>
    <string name="make_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="toast_msg_1">This button will launch my </string>
    <string name="toast_msg_2"> app!</string>
</resources>
