<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/Linear_layout_margin"
            android:orientation="vertical"
            android:padding="@dimen/Linear_layout_padding"
            tools:context="com.param.android.myappportfolio.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_nanodegree_heading"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="@dimen/heading_text_size" />

            <Button
                android:id="@+id/btn_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"

                android:text="@string/poplular_movies" />


            <Button
                android:id="@+id/btn_stock_hawk"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/stock_hawk" />

            <Button
                android:id="@+id/btn_buildit_bigger"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/buildit_bigger" />

            <Button
                android:id="@+id/btn_make_app_material"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/make_app_material" />

            <Button
                android:id="@+id/btn_go_ubiquitous"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/go_ubiquitous" />

            <Button
                android:id="@+id/btn_capstone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/capstone" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
